--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,12 +87,12 @@ body {
 	font-size: 19pt;
 	font-weight: 300;
 	line-height: 1.75em;
-	color: #fcfdfd;
+	color: #B800FF;/*Body Text Inventory*/
 }
 
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 300;
-	color: #bbc8d1;
+	color: #00FF1D; /*Title Text all Titles*/
 	line-height: 1.5em;
 }
 
@@ -1681,7 +1681,7 @@ blockquote {
 		.image.avatar48 {
 			width: 48px;
 			height: 48px;
-			background: #f00;
+			background: #a75755;
 		}
 
 			.image.avatar48 img {
@@ -1872,7 +1872,7 @@ blockquote {
 		color: #fff !important;
 		text-decoration: none;
 		padding: 0.75em 2.5em 0.75em 2.5em;
-		background-color: #8ebebc;
+		background-color: #f4d883;
 		border: 0;
 		cursor: pointer;
 		background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
@@ -1890,7 +1890,7 @@ blockquote {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #9ececc;
+			background-color: #a75755;
 		}
 
 		input[type="button"]:active,
@@ -1972,7 +1972,7 @@ blockquote {
 		justify-content: space-between;
 		background: #222629 url("images/overlay.png");
 		box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
-		color: #fff;
+		color: #FF0004; /* This is for the text under the Nav Menu*/
 		height: 100%;
 		left: 0;
 		overflow-y: auto;
@@ -2007,7 +2007,7 @@ blockquote {
 		}
 
 			#header .icons a {
-				color: #41484c;
+				color: #bbc8d1; /*Social Media Icons*/
 				-moz-transition: color 0.35s ease-in-out;
 				-webkit-transition: color 0.35s ease-in-out;
 				-ms-transition: color 0.35s ease-in-out;
@@ -2015,7 +2015,7 @@ blockquote {
 			}
 
 				#header .icons a:hover {
-					color: #fff;
+					color: #a75755; /*Hover Color*/
 				}
 
 	#logo {
@@ -2027,7 +2027,7 @@ blockquote {
 
 		#logo h1 {
 			position: relative;
-			color: #fff;
+			color: #FFFFFF; /*Text Logo Color*/
 			font-weight: 600;
 			font-size: 1em;
 			line-height: 1em;
@@ -2080,7 +2080,7 @@ blockquote {
 					#nav ul li a span:before {
 						position: absolute;
 						left: 0;
-						color: #41484c;
+						color: #f4d883; /*Nav Icon Color*/
 						text-align: center;
 						width: 1.25em;
 						line-height: 1.75em;
@@ -2089,11 +2089,11 @@ blockquote {
 				#nav ul li a.active {
 					background: rgba(0, 0, 0, 0.15);
 					box-shadow: inset 0 0 0.25em 0 rgba(0, 0, 0, 0.125);
-					color: #fff;
+					color: #F4D883;/*Nav bar Selection Color Highlight*/
 				}
 
 					#nav ul li a.active span:before {
-						color: #e27689;
+						color: #f4d883;/*Icon Selection Highlight*/
 					}
 
 /* Footer */
@@ -2101,30 +2101,40 @@ blockquote {
 	#footer {
 		margin-left: 375px;
 		text-align: center;
-		background-color: #dce3e2;
+		background-color: #dce3e2; /*Input field background*/
 		padding: 3em 0 4em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
 	}
 
-		#footer .copyright {
-			cursor: default;
-			margin: 0;
-		}
+		#footer {
+    text-align: center;
+    background-color: #dce3e2; /*Input field background*/
+    padding: 3em 0 4em 0;
+    box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
+    font-size: 0.8em;
+    width: 100%; /* Make the footer span the entire width */
+    margin: 0; /* Remove any margins */
+}
 
-			#footer .copyright li {
-				display: inline-block;
-				line-height: 1em;
-				border-left: solid 1px rgba(128, 128, 128, 0.35);
-				padding: 0 0 0 0.5em;
-				margin: 0 0 0 0.5em;
-			}
+#footer .copyright {
+    cursor: default;
+    margin: 0;
+}
 
-				#footer .copyright li:first-child {
-					border-left: 0;
-					padding-left: 0;
-					margin-left: 0;
-				}
+#footer .copyright li {
+    display: inline-block;
+    line-height: 1em;
+    border-left: solid 1px rgba(128, 128, 128, 0.35);
+    padding: 0 0 0 0.5em;
+    margin: 0 0 0 0.5em;
+}
+
+#footer .copyright li:first-child {
+    border-left: 0;
+    padding-left: 0;
+    margin-left: 0;
+}
 
 /* Main */
 
@@ -2171,20 +2181,20 @@ blockquote {
 			}
 
 			#main > section.one {
-				background-color: #81918E;
+				background-color: #000000;/*First section Background*/
 				background-image: url("../../images/banner.jpg");
 			}
 
 			#main > section.two {
-				background-color: #f5fafa;
+				background-color: #0c0d0b;/*Inventory Section background color*/
 			}
 
 			#main > section.three {
-				background-color: #ecf1f1;
+				background-color: #0c0d0b;/**/
 			}
 
 			#main > section.four {
-				background-color: #e8edec;
+				background-color: #FFFFFF;/*Contact Information Background*/
 			}
 
 /* Wide */
@@ -2433,7 +2443,7 @@ blockquote {
 					#headerToggle .toggle:before {
 						text-decoration: none;
 						content: '\f0c9';
-						color: #fff;
+						color: #FFFFFF;
 						font-size: 18px;
 						background: rgba(128, 136, 144, 0.5);
 						border-radius: 0.35em;
